--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <nav>
-      <input type="color" id="color1" value="#ff0000" />
+      <input type="color" id="color-picker" value="#ff0000" />
       <select name="options" id="options">
         <option value="complementary">Complementary</option>
         <option value="analogous">Analogous</option>
@@ -19,8 +19,20 @@
       </select>
       <button>Get color scheme</button>
     </nav>
-    <main></main>
-    <footer></footer>
+    <main>
+      <div class="color" id="color1"></div>
+      <div class="color" id="color2"></div>
+      <div class="color" id="color3"></div>
+      <div class="color" id="color4"></div>
+      <div class="color" id="color5"></div>
+    </main>
+    <footer>
+      <p class="color-name" id="color1-name">dfjkghd</p>
+      <p class="color-name" id="color2-name">dfjkghd</p>
+      <p class="color-name" id="color3-name">dfjkghd</p>
+      <p class="color-name" id="color4-name">dfjkghd</p>
+      <p class="color-name" id="color5-name">dfjkghd</p>
+    </footer>
     <script src="app.js"></script>
   </body>
 </html>
