basic project is ready

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
     <nav>
       <input type="color" id="color-picker" value="#ff0000" />
       <select name="options" id="options">
-        <option value="complementary">Complementary</option>
-        <option value="analogous">Analogous</option>
-        <option value="triadic">Triadic</option>
-        <option value="split-complementary">Split Complementary</option>
-        <option value="rectangle">Rectangle</option>
-        <option value="square">Square</option>
+        <option value="monochrome">Monochrome</option>
+        <option value="monochrome-dark">Monochrome-Dark</option>
+        <option value="monochrome-light">Monochrome Light</option>
+        <option value="analogic">Analogic</option>
+        <option value="complement">Complement</option>
+        <option value="analogic-complement">Analogic Complement</option>
+        <option value="triad">Triad</option>
+        <option value="quad">Quad</option>
       </select>
       <button>Get color scheme</button>
     </nav>
