--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
       <div class="color" id="color3"></div>
       <div class="color" id="color4"></div>
       <div class="color" id="color5"></div>
+      <span class="copied-text">Copied!</span>
     </main>
     <footer>
-      <p class="color-name" id="color1-name">dfjkghd</p>
-      <p class="color-name" id="color2-name">dfjkghd</p>
-      <p class="color-name" id="color3-name">dfjkghd</p>
-      <p class="color-name" id="color4-name">dfjkghd</p>
-      <p class="color-name" id="color5-name">dfjkghd</p>
+      <p class="color-name" id="color1-name"></p>
+      <p class="color-name" id="color2-name"></p>
+      <p class="color-name" id="color3-name"></p>
+      <p class="color-name" id="color4-name"></p>
+      <p class="color-name" id="color5-name"></p>
     </footer>
     <script src="app.js"></script>
   </body>
